app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-note
spec:
  ports:
    - nodePort: 31288
      port: 8080
      protocol: TCP
      targetPort: 5000
  selector:
    app: app-note
  type: NodePort
